--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         
         <div class="score-container">
             <div class="player-side">
-                <div class="score-label">You</div>
+                <div class="score-label" id="left-player-label">You</div>
                 <div id="player-score">0</div>
             </div>
             <div class="computer-side">
-                <div class="score-label">Opponent</div>
+                <div class="score-label" id="right-player-label">Opponent</div>
                 <div id="computer-score">0</div>
             </div>
         </div>
